--- a/WindowsFormsApp/App.config
+++ b/WindowsFormsApp/App.config
@@ -1,5 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="WindowsFormsApp.Properties.Settings.ConnectionString"
+            connectionString="Data Source=DESKTOP-U8NPKH2\SQLEXPRESS;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="WindowsFormsApp.Properties.Settings.agendaparcialConnectionString"
+            connectionString="Data Source=DESKTOP-U8NPKH2\SQLEXPRESS;Initial Catalog=agendaparcial;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
