--- a/WindowsFormsApp/WillianProjetoAgenda.csproj
+++ b/WindowsFormsApp/WillianProjetoAgenda.csproj
@@ -46,6 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="agendaparcialDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>agendaparcialDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Agenda\Agenda.cs" />
     <Compile Include="Agenda\CadastroAgenda.cs">
       <SubType>Form</SubType>
@@ -85,6 +90,17 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="agendaparcialDataSet.xsc">
+      <DependentUpon>agendaparcialDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="agendaparcialDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>agendaparcialDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="agendaparcialDataSet.xss">
+      <DependentUpon>agendaparcialDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
