--- a/WindowsFormsApp/WillianProjetoAgenda.csproj
+++ b/WindowsFormsApp/WillianProjetoAgenda.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Agenda\CadastroAgenda.Designer.cs">
       <DependentUpon>CadastroAgenda.cs</DependentUpon>
     </Compile>
+    <Compile Include="ManipulaAgenda\Conexao.cs" />
+    <Compile Include="ManipulaAgenda\Manipulacao.cs" />
     <Compile Include="Cadastro Funcionario\Gerente.cs" />
     <Compile Include="Cadastro Funcionario\ListaFuncionario.cs" />
     <Compile Include="Agenda\Pessoas.cs" />
